kubernetes/apps/database/dragonfly/cluster/netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly-allow-traffic
  namespace: database
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dragonfly
  ingress:
    - from:
        - namespaceSelector: {}
    - ports:
        - port: 9999
          protocol: TCP
        - port: 6379
          protocol: TCP
